--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "axios": "^1.5.0",
+    "react-router-dom": "^6.16.0",
+    "react-hook-form": "^7.46.1",
+    "react-redux": "^8.1.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
